--- a/src/components/CanvasMenu/styles.module.scss
+++ b/src/components/CanvasMenu/styles.module.scss
@@ -8,15 +8,15 @@
 		width: 100%;
 	}
 
-	input[type=range] {
+	input[type='range'] {
 		-webkit-appearance: none;
 		height: 5px;
 		border-radius: 5px;
 		background: #d3d3d3;
 		outline: none;
 		opacity: 0.7;
-		-webkit-transition: .2s;
-		transition: opacity .2s;
+		-webkit-transition: 0.2s;
+		transition: opacity 0.2s;
 
 		&::-webkit-slider-thumb {
 			-webkit-appearance: none;
@@ -43,7 +43,6 @@
 		align-items: center;
 
 		&_actions {
-
 			button {
 				&:first-child {
 					margin-right: 5px;
@@ -56,7 +55,6 @@
 		}
 	}
 
-
 	&__burgerButton {
 		display: none;
 	}
@@ -66,7 +64,7 @@
 		z-index: 10;
 		top: 0;
 		left: 0;
-		transition: transform .1s linear;
+		transition: transform 0.1s linear;
 		overflow-y: scroll;
 
 		padding: 20px 10px;
@@ -96,7 +94,6 @@
 			left: 15px;
 		}
 	}
-
 }
 
 @media screen and (max-width: 575.98px) {
