--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -26,7 +26,7 @@
 	}
 
 	&__burgerButton {
-			display: none;
+		display: none;
 	}
 
 	&__menu {
@@ -34,7 +34,7 @@
 		z-index: 10;
 		top: 0;
 		right: 0;
-		transition: transform .1s linear;
+		transition: transform 0.1s linear;
 		overflow-y: scroll;
 
 		padding: 20px 10px;
