--- a/src/components/UI/ThemeSwitch/styles.module.scss
+++ b/src/components/UI/ThemeSwitch/styles.module.scss
@@ -1,72 +1,70 @@
 .themeSwitch {
-  display: block;
-  margin: auto;
+	display: block;
+	margin: auto;
 
-  &__container {
-    cursor: pointer;
+	&__container {
+		cursor: pointer;
 
-    input {
-      display: none;
+		input {
+			display: none;
 
-      & + div {
-        border-radius: 50%;
-        width: 26px;
-        height: 26px;
-        position: relative;
-        box-shadow: inset 8px -10px 0 0 var(--color-toggle-dark, #000);
-        transform: scale(1) rotate(-2deg);
-        transition: box-shadow 0.5s ease 0s, transform 0.4s ease 0.1s;
+			& + div {
+				border-radius: 50%;
+				width: 26px;
+				height: 26px;
+				position: relative;
+				box-shadow: inset 8px -10px 0 0 var(--color-toggle-dark, #000);
+				transform: scale(1) rotate(-2deg);
+				transition: box-shadow 0.5s ease 0s, transform 0.4s ease 0.1s;
 
-        &::before {
-          content: "";
-          width: inherit;
-          height: inherit;
-          border-radius: inherit;
-          position: absolute;
-          left: 0;
-          top: 0;
-          transition: background 0.3s ease;
-        }
+				&::before {
+					content: '';
+					width: inherit;
+					height: inherit;
+					border-radius: inherit;
+					position: absolute;
+					left: 0;
+					top: 0;
+					transition: background 0.3s ease;
+				}
 
-        &::after {
-          content: "";
-          width: 8px;
-          height: 8px;
-          border-radius: 50%;
-          margin: -4px 0 0 -4px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          box-shadow: 0 -23px 0 var(--color-toggle-light, #eee),
-            0 23px 0 var(--color-toggle-light, #eee),
-            23px 0 0 var(--color-toggle-light, #eee),
-            -23px 0 0 var(--color-toggle-light, #eee),
-            15px 15px 0 var(--color-toggle-light, #eee),
-            -15px 15px 0 var(--color-toggle-light, #eee),
-            15px -15px 0 var(--color-toggle-light, #eee),
-            -15px -15px 0 var(--color-toggle-light, #eee);
-          transform: scale(0);
-          transition: all 0.3s ease;
-        }
-      }
+				&::after {
+					content: '';
+					width: 8px;
+					height: 8px;
+					border-radius: 50%;
+					margin: -4px 0 0 -4px;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					box-shadow: 0 -23px 0 var(--color-toggle-light, #eee),
+						0 23px 0 var(--color-toggle-light, #eee),
+						23px 0 0 var(--color-toggle-light, #eee),
+						-23px 0 0 var(--color-toggle-light, #eee),
+						15px 15px 0 var(--color-toggle-light, #eee),
+						-15px 15px 0 var(--color-toggle-light, #eee),
+						15px -15px 0 var(--color-toggle-light, #eee),
+						-15px -15px 0 var(--color-toggle-light, #eee);
+					transform: scale(0);
+					transition: all 0.3s ease;
+				}
+			}
 
-      &:checked + div {
-        box-shadow: inset 32px -32px 0 0 #fff;
-        transform: scale(0.5) rotate(0deg);
-        transition: transform 0.3s ease 0.1s, box-shadow 0.2s ease 0s;
+			&:checked + div {
+				box-shadow: inset 32px -32px 0 0 #fff;
+				transform: scale(0.5) rotate(0deg);
+				transition: transform 0.3s ease 0.1s, box-shadow 0.2s ease 0s;
 
-        &::before {
-          background: var(--color-toggle-light, #eee);
-          transition: background 0.3s ease 0.1s;
-        }
+				&::before {
+					background: var(--color-toggle-light, #eee);
+					transition: background 0.3s ease 0.1s;
+				}
 
-        &::after {
-          transform: scale(1.5);
-          transition: transform 0.5s ease 0.15s;
-        }
-      }
-
-
-    }
-  }
+				&::after {
+					transform: scale(1.5);
+					transition: transform 0.5s ease 0.15s;
+				}
+			}
+		}
+	}
 }
